# RealTime_Rendering_Projects

./: CMakeLists.txt  README.md
assimp/include/assimp/: material.inl
hair_shaders/: furShader.frag  furShader.gs  furShader.tc  furShader.te  furShader.vert
models/: airplane.mtl  airplane_part.mtl  floor.mtl
shaders/: bumpFragmentShader.txt  bumpVertexShader.txt  fresnelFragmentShader.txt  mipmappingFragmentShader.txt  mipmappingVertexShader.txt  phongFragmentShader.txt  simpleFragmentShader.txt  simpleVertexShader.txt
source/: Camera.h  Final.cpp  main.cpp  mainLab2.cpp  mainLab3.cpp  mainLab4.cpp
